chore: update readme
